--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@fastify/formbody": "^8.0.1",
     "@fastify/helmet": "^13.0.0",
     "fastify": "^5.2.0",
-    "marked": "^15.0.4"
+    "moment": "^2.30.1",
+    "mongoose": "^8.9.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
